# aac

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  demo_grid_navigation.py  demo_road_routing.py  demo_terrain_routing.py
results/: PREREG.md  README.md  covering_radius.csv  scc_reachability.csv
results/ablation_selection/: exp1_selection_strategy.csv  exp2_admissibility_robustness.csv  exp3_compression_curve.csv
results/cdh_baseline/: modena_cdh.csv  ny_cdh.csv  sbm_cdh.csv
results/coverage_aware/: coverage_aware_nonroad_ba.csv  coverage_aware_nonroad_results.csv  coverage_aware_nonroad_sbm_ba.csv  coverage_aware_results.csv
results/dimacs/: aac_BAY.csv  aac_COL.csv  aac_FLA.csv  aac_NY.csv  fastmap_admissibility.csv  fastmap_admissibility_summary.csv  pareto_sweep_FLA.csv  pareto_sweep_FLA_multiseed.csv  pareto_sweep_FLA_perseed.csv  pareto_sweep_NY.csv  pareto_sweep_NY_multiseed.csv  pareto_sweep_NY_perseed.csv  pareto_valsplit_FLA.csv  pareto_valsplit_NY.csv  path_optimality_audit.csv  per_query_paired.csv  preprocessing_breakdown.csv  timing_p50_p95.csv  wilcoxon_matched_budget.csv  wilcoxon_pvalues.csv  wilcoxon_pvalues_multiseed.csv  wilcoxon_stouffer.csv
results/greedy_max_nonroad/: greedy_max.csv
results/hybrid/: hybrid_evaluation.csv
results/hybrid_nonroad/: matched_budget_hybrid.csv
results/lambda_uniq_ablation/: modena_results.csv
results/osmnx/: large_scale_results.csv  large_scale_results_agg.csv  pareto_valsplit_manhattan.csv  pareto_valsplit_modena.csv
results/query_distributions/: query_mode_results.csv  query_mode_summary.csv
results/random_restart_fps/: manhattan.csv  modena.csv
results/same_pool_first_m/: NY.csv  ba.csv  berlin.csv  los_angeles.csv  manhattan.csv  modena.csv  (+1 more)
scripts/: README.md  check_paper_consistency.py  check_scc_reachability.py  compute_covering_radius.py  compute_tost_equivalence.py  diagnose_sbm_aac_alt.py  download_all_data.py  download_dimacs.py  download_osmnx.py  eval_hybrid.py  generate_landmark_viz.py  generate_landmark_viz_sbm.py  generate_paper_figures.py  generate_readme_gif.py  generate_table_osmnx.py  generate_table_osmnx_full.py  generate_warcraft_data.py  plot_amortized_cost.py  plot_pareto_seedbands.py  plot_toy_p7_divergence.py  plot_training_drift_multi.py  reproduce_paper.py  run_ablation_selection.py  run_cdh_baseline.py  run_cdh_road.py  run_coverage_aware.py  run_coverage_aware_nonroad.py  run_fastmap_admissibility.py  run_gradient_analysis.py  run_greedy_max_nonroad.py  run_lambda_uniq_ablation.py  run_matched_budget_wilcoxon.py  run_matched_hybrid_nonroad.py  run_multiseed_ablation.py  run_multiseed_pareto.py  run_multiseed_wilcoxon.py  run_nonroad_real.py  run_osmnx_experiments.py  run_query_distribution_experiments.py  run_random_restart_fps.py  (+10 more)
tests/: conftest.py  test_admissibility_properties.py  test_audit_correctness.py  test_baselines.py  test_compression.py  test_compression_viz.py  test_configs.py  test_contextual.py  test_contextual_experiments.py  test_embeddings.py  test_graphs.py  test_heuristic_edge_cases.py  test_io.py  test_lipschitz_sentinel.py  test_loaders.py  test_memory.py  test_metrics.py  test_numerics.py  test_paper_invariants.py  test_pbf_loader.py  test_query_generation.py  test_query_generation_audit.py  test_reporting.py  test_reproducibility.py  test_runners.py  test_scripts.py  test_search.py  test_semirings.py  test_smoke_pipeline.py  test_smooth.py  test_sssp.py  test_statistical_methodology.py  test_toy_p7.py  test_train.py  test_viz_embeddings.py  test_viz_results.py  test_viz_search.py  test_viz_style.py
(+117 files in other folders)
