[project]
name = "aac"
version = "1.0.0"
description = "AAC: Admissible-by-Architecture Differentiable Landmark Compression for ALT"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "An T. Le", email = "an@robot-learning.de"},
]
dependencies = [
    "torch>=2.11.0",
    "scipy>=1.14",
    "networkx>=3.2",
    "osmnx>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/anindex/aac"
Repository = "https://github.com/anindex/aac"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "hypothesis>=6.0",
    "ruff>=0.9",
    "mypy>=1.10",
    "pytest-benchmark>=5.0",
]
experiments = [
    "hydra-core>=1.3.2",
    "omegaconf>=2.3",
    "tensorboard>=2.14",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas>=2.0",
    "scikit-learn>=1.5",
    "Pillow>=9.0",
]
scalability = [
    "networkit>=11.0",
    "pyrosm>=0.6.2",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --tb=short"
markers = [
    "gpu: requires CUDA GPU",
    "network: requires network access",
    "slow: takes > 30 seconds",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",   # line-too-long (scientific formulae / docstrings)
    "E702",   # multiple-statements-on-one-line (compact matplotlib tick removal)
    "E731",   # lambda-assignment (common in functional-style scientific code)
    "E741",   # ambiguous-variable-name (l, I, O are standard math notation)
    "E712",   # true-false-comparison (acceptable in tests)
    "F821",   # undefined-name (string-quoted forward references in annotations)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402", "F841"]   # sys.path manipulation before imports; result-capture vars
"tests/*.py" = ["E402", "F841"]     # fixture imports; assertion intermediate vars
"examples/*.py" = ["E402"]          # sys.path manipulation

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
